--- a/hexaorzo.net/status/uptime-kuma.toml
+++ b/hexaorzo.net/status/uptime-kuma.toml
@@ -1,9 +1,3 @@
-
-# fly.toml app configuration file generated for hexaorzo-status on 2024-01-05T08:18:14Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
 app = "hexaorzo-status"
 primary_region = "hkg"
 kill_signal = "SIGINT"
@@ -16,10 +10,10 @@ kill_timeout = "5s"
   image = "louislam/uptime-kuma:latest"
 
 [[mounts]]
-  source = "status_data_machines"
+  source = "status_data"
   destination = "/app/data"
+  initial_size = "1GB"
   processes = ["app"]
-  auto_extend_size_threshold = 0
 
 [[services]]
   protocol = "tcp"
@@ -38,8 +32,3 @@ kill_timeout = "5s"
     type = "connections"
     hard_limit = 25
     soft_limit = 20
-
-  [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "1s"
