--- a/hexaorzo.net/ssh/sshwifty.toml
+++ b/hexaorzo.net/ssh/sshwifty.toml
@@ -1,1 +1,29 @@
 
+app = "hexaorzo-ssh"
+primary_region = "hkg"
+kill_signal = "SIGINT"
+kill_timeout = "5s"
+
+[experimental]
+  auto_rollback = true
+
+[build]
+  image = "niruix/sshwifty:latest"
+
+[[services]]
+  protocol = "tcp"
+  internal_port = 8182
+  processes = ["app"]
+
+  [[services.ports]]
+    port = 80
+    handlers = ["http"]
+    force_https = true
+
+  [[services.ports]]
+    port = 443
+    handlers = ["tls", "http"]
+  [services.concurrency]
+    type = "connections"
+    hard_limit = 25
+    soft_limit = 20
