--- a/.github/workflows/ssl.yml
+++ b/.github/workflows/ssl.yml
@@ -10,8 +10,20 @@ jobs:
       - name: Install acme.sh
         run: curl https://get.acme.sh | sh -s email=hi@hexaorzo.net
       - name: Issue SSL cert
-        run: |
-          cd /home/runner/.acme.sh
-          ./acme.sh --issue --dns dns_cf -d hexaorzo.net -d '*.hexaorzo.net' --server letsencrypt
-      - name: Install Doppler CLI
-        uses: DopplerHQ/cli-action@v2
+        uses: Menci/acme@v1
+        with:
+          version: 3.0.2
+
+          # Register your account and try issue a certificate with DNS API mode
+          # Then fill with the output of `tar cz ca account.conf | base64 -w0` running in your `~/.acme.sh`
+          account-tar: ${{ secrets.ACME_SH_ACCOUNT_TAR }}
+
+          domains: hexaorzo.net
+          domains-file: ''
+          append-wildcard: true
+
+          arguments: --dns dns_cf --server letsencrypt
+
+          output-fullchain: output/fullchain.pem
+          output-key: output/key.pem
+          
